format(pie-docs): fix truncation

--- a/apps/pie-docs/src/assets/styles/components/_card.scss
+++ b/apps/pie-docs/src/assets/styles/components/_card.scss
@@ -139,7 +139,7 @@ h2 + .c-card-wrapper {
     margin-top: 0;
 }
 
-.c-card-label a > span {
+.c-card-label > span {
     display: block;
     @include f.truncate(20ch);
 }
